bad/assign_uop_ineg_void.example_compiler_output
ERROR
[1mbad/assign_uop_ineg_void.lat:5:9: [1;31merror: [0;1mleft side is not assignable[m
	-(4+2) = vfunc();
	       [1;32m^[m
[1mbad/assign_uop_ineg_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	-(4+2) = vfunc();
	[1;32m^[m
